# migracao-sismica

./: .gitignore  .pre-commit-config.yaml  CNAME  LICENSE  README.md  app.config.json  index.md  pyproject.toml  run.bat
app/: config.py  main.py
app/models/: ricker.py  secao.py
app/utils/: __init__.py  boundary.py  operator.py  save.py
input/: parametros.txt
scripts/: Boundary.py  Model.py  Operador.py  Parametros.py  Ricker.py  Secao_Migrada.py  Sismograma.py  aux_functions.py  main.py  parameters.py
